# rim

./: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  cliff.toml  rustfmt.toml  taplo.toml
.cargo/: config.toml
.github/workflows/: ci.yml  docs-pages.yml
ADR/: 0001-layered-hexagonal-architecture.md
crates/rim-app/: Cargo.toml
crates/rim-app/src/: app.rs  boilerplate.rs
crates/rim-cli/: Cargo.toml
crates/rim-cli/src/: main.rs
crates/rim-infra-file-io/: Cargo.toml
crates/rim-infra-file-io/src/: lib.rs
crates/rim-infra-file-watcher/: Cargo.toml
crates/rim-infra-input/: Cargo.toml
crates/rim-infra-input/src/: lib.rs
crates/rim-infra-persistence/: Cargo.toml
crates/rim-infra-persistence/src/: lib.rs
crates/rim-infra-swap/: Cargo.toml
crates/rim-infra-swap/src/: lib.rs
crates/rim-infra-ui/: Cargo.toml
crates/rim-infra-ui/src/: status_bar.rs  terminal_session.rs  top_bar.rs  window_area.rs
crates/rim-infra-ui/src/window_area/: tests.rs
crates/rim-kernel/: Cargo.toml
crates/rim-kernel/src/: action.rs  action_handler.rs  ports.rs
crates/rim-kernel/src/state/: buffer.rs  edit.rs  mod.rs  tab.rs  window.rs
crates/rim-kernel/src/state/tests/: buffer.rs  common.rs  edit.rs  mod.rs  mode_io.rs
crates/rim-paths/: Cargo.toml
crates/rim-tui/: Cargo.toml
crates/rim-tui/src/: logging.rs  main.rs
docs/: README.md  astro.config.mjs  package.json  pnpm-lock.yaml
docs/public/casts/: rim-demo.cast  rim-full-demo.cast
docs/src/components/: AsciinemaCast.astro  MarkdownContent.astro
docs/src/content/docs/: index.mdx
docs/src/content/docs/architecture/: application-layer.mdx  dependency-rules.mdx  domain-model.mdx  overview.mdx  ports-and-adapters.mdx  runtime-event-loop.mdx
docs/src/content/docs/contributing/: how-to-add-a-command.mdx  testing-strategy.mdx
docs/src/content/docs/guides/: configuration.mdx  editor-workflows.mdx  getting-started.mdx  how-to-add-a-command.mdx  local-development.mdx  runtime-and-recovery.mdx
docs/src/content/docs/reference/: architecture.mdx  commands.mdx  config.mdx  features.mdx  undo-redo-swap.mdx  workspace-layout.mdx  workspace-session.mdx
docs/src/content/docs/tutorials/: command-palette.mdx  index.mdx  key-hints.mdx  mode-transitions.mdx  notification-center.mdx  visual-block-insert.mdx  visual-selection.mdx  windows-and-tabs.mdx  (+1 more)
docs/src/styles/: custom.css
plugins/: README.md
plugins/example/: plugin.toml
plugins/rim-plugin-yazi/: Cargo.toml
plugins/rim-plugin-yazi/src/: lib.rs
rim-app/: Cargo.toml
rim-app/src/: app.rs  boilerplate.rs  cli.rs  config.rs  lib.rs  logging.rs  main.rs
rim-application/: Cargo.toml
rim-application/presets/: commands.toml  editor.toml  keymaps.toml
rim-application/src/: action.rs  command.rs  config.rs  defaults.rs  display_geometry.rs  lib.rs  ports.rs
rim-application/src/action_handler/: command_flow.rs  editor_flow.rs  errors.rs  file_flow.rs  mod.rs  mode_flow.rs  plugin_flow.rs  post_edit_flow.rs
rim-application/src/action_handler/tests/: file_flow.rs  mod.rs  mode_flow.rs  plugin_flow.rs  support.rs
rim-application/src/state/: buffer.rs  mod.rs  mode.rs  plugin.rs  session.rs  tab.rs  window.rs
rim-application/src/state/edit/: core_edit.rs  mod.rs  movement.rs  visual.rs
rim-application/src/state/tests/: edit.rs  mode_io.rs  notifications.rs  session.rs
rim-command-macros/: Cargo.toml
rim-command-macros/src/: lib.rs
rim-domain/: Cargo.toml
rim-domain/src/: display_geometry.rs  edit.rs  editor.rs  lib.rs  model.rs  preview.rs  text.rs
rim-domain/src/editor/: buffer.rs  core.rs  edit.rs  movement.rs  session.rs  tab.rs  visual.rs  window.rs
rim-infra-file-watcher/: Cargo.toml
rim-infra-file-watcher/src/: lib.rs
rim-infra-input/: Cargo.toml
rim-infra-input/src/: lib.rs
rim-infra-persistence/: Cargo.toml
rim-infra-persistence/src/: lib.rs
rim-infra-storage/: Cargo.toml
rim-infra-storage/src/: lib.rs  path_codec.rs  session.rs
rim-infra-storage/src/swap_session/: compaction.rs  lease.rs  mod.rs  protocol.rs
rim-infra-storage/src/tests/: mod.rs  path_codec.rs  session.rs  swap_session.rs  undo_history.rs
rim-infra-storage/src/undo_history/: mod.rs  protocol.rs  session_flow.rs
rim-infra-storage/src/worker/: file_transfer.rs  history_flow.rs  mod.rs  swap_flow.rs
rim-infra-ui/: Cargo.toml
rim-infra-ui/src/: command_palette.rs  floating_window.rs  lib.rs  notification_center.rs  notification_preview.rs  status_bar.rs  terminal_session.rs  top_bar.rs  workspace_file_picker.rs
rim-infra-ui/src/window_area/: mod.rs  tests.rs
rim-kernel/: Cargo.toml
rim-kernel/src/: action.rs  action_handler.rs  command.rs  display_geometry.rs  lib.rs  ports.rs  preview.rs
rim-kernel/src/action_handler/: command_flow.rs  editor_flow.rs  errors.rs  file_flow.rs  mod.rs  mode_flow.rs  post_edit_flow.rs
rim-kernel/src/action_handler/tests/: file_flow.rs  mode_flow.rs  post_edit_flow.rs  support.rs
rim-kernel/src/state/: buffer.rs  mod.rs  mode.rs  session.rs  tab.rs  window.rs
rim-kernel/src/state/edit/: core_edit.rs  mod.rs  movement.rs  visual.rs
rim-kernel/src/state/tests/: buffer.rs  common.rs  edit.rs  mod.rs  session.rs  tab.rs  window.rs
rim-paths/src/: lib.rs
rim-plugin-api/: Cargo.toml
rim-plugin-api/src/: lib.rs
rim-plugin-api/wit/: rim-plugin.wit
rim-plugin-example/: Cargo.toml
rim-plugin-example/src/: lib.rs
rim-plugin-host/: Cargo.toml
rim-plugin-host/src/: lib.rs
rim-plugin-yazi/src/: lib.rs
rim-ports/: Cargo.toml
rim-ports/src/: lib.rs  plugin.rs
rim-tui/: Cargo.toml
src/: action.rs  action_handler.rs  app.rs  boilerplate.rs  file_io_service.rs  file_watcher_service.rs  input.rs  io_gateway.rs  lib.rs  logging.rs  main.rs  state.rs  ui.rs
src/state/: buffer.rs  edit.rs  mod.rs  tab.rs  window.rs
src/state/tests/: buffer.rs  common.rs  edit.rs  mode_io.rs  tab.rs  window.rs
src/ui/: mod.rs  status_bar.rs  terminal_session.rs  top_bar.rs  window_area.rs
src/ui/window_area/: tests.rs
tests/: state_workflow.rs
(+2 files in other folders)
