[workspace]
members = [
  "rim-command-macros",
  "rim-paths",
  "rim-kernel",
  "rim-infra-storage",
  "rim-infra-file-watcher",
  "rim-infra-input",
  "rim-infra-ui",
  "rim-app",
]
resolver = "2"

[workspace.package]
version = "0.0.3"
edition = "2024"
authors = ["zooeywm <zooeywm@gmail.com>"]

[workspace.dependencies]
anyhow                 = "1"
base64                 = "0.22"
compio                 = { version = "0.18", features = ["fs", "macros", "time"] }
crossterm              = "0.29"
dep-inj                = "0.1"
derive_more            = { version = "2.1", features = ["as_ref"] }
flume                  = "0.12"
frizbee                = "0.8.3"
notify                 = "8.2"
ratatui                = "0.30"
ropey                  = "1.6"
serde                  = { version = "1", features = ["derive"] }
serde_json             = "1"
slotmap                = "1.0"
thiserror              = "2"
time                   = { version = "0.3", features = ["formatting", "macros", "local-offset"] }
tracing                = "0.1"
tracing-appender       = "0.2"
tracing-subscriber     = { version = "0.3", features = ["env-filter", "fmt", "time", "local-time"] }
toml                   = "1.0"
unicode-width          = "0.2"
rim-app                = { path = "rim-app" }
rim-command-macros     = { path = "rim-command-macros" }
rim-infra-storage      = { path = "rim-infra-storage" }
rim-infra-file-watcher = { path = "rim-infra-file-watcher" }
rim-infra-input        = { path = "rim-infra-input" }
rim-infra-ui           = { path = "rim-infra-ui" }
rim-kernel             = { path = "rim-kernel" }
rim-paths              = { path = "rim-paths" }
