[package]
name              = "rim-app"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "rim"
path = "src/main.rs"

[dependencies]
anyhow.workspace                 = true
derive_more.workspace            = true
flume.workspace                  = true
thiserror.workspace              = true
time.workspace                   = true
tracing.workspace                = true
tracing-appender.workspace       = true
tracing-subscriber.workspace     = true
rim-kernel.workspace             = true
rim-paths.workspace              = true
rim-infra-file-io.workspace      = true
rim-infra-file-watcher.workspace = true
rim-infra-persistence.workspace  = true
rim-infra-input.workspace        = true
rim-infra-ui.workspace           = true