[package]
name              = "rim-app"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "rim"
path = "src/main.rs"

[dependencies]
anyhow.workspace                 = true
clap.workspace                   = true
derive_more.workspace            = true
flume.workspace                  = true
serde.workspace                  = true
thiserror.workspace              = true
time.workspace                   = true
toml.workspace                   = true
tracing.workspace                = true
tracing-appender.workspace       = true
tracing-subscriber.workspace     = true
rim-application.workspace        = true
rim-domain.workspace             = true
rim-ports.workspace              = true
rim-paths.workspace              = true
rim-plugin-host.workspace        = true
rim-infra-storage.workspace      = true
rim-infra-file-watcher.workspace = true
rim-infra-input.workspace        = true
rim-infra-ui.workspace           = true
