[package]
name              = "rim-infra-file-watcher"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
flume.workspace      = true
notify.workspace     = true
tracing.workspace    = true
dep-inj.workspace    = true
rim-application.workspace = true
rim-domain.workspace      = true
rim-ports.workspace       = true
