[package]
name              = "rim-infra-persistence"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace     = true
base64.workspace     = true
flume.workspace      = true
ropey.workspace      = true
tracing.workspace    = true
serde_json.workspace = true
serde.workspace      = true
dep-inj.workspace    = true
rim-kernel.workspace = true
rim-paths.workspace  = true