[package]
name              = "rim-infra-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
crossterm.workspace     = true
ropey.workspace         = true
ratatui.workspace       = true
thiserror.workspace     = true
unicode-width.workspace = true
rim-application.workspace = true
