[package]
name              = "rim-kernel"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace        = true
frizbee.workspace       = true
thiserror.workspace     = true
tracing.workspace       = true
slotmap.workspace       = true
unicode-width.workspace = true
ropey.workspace         = true
serde.workspace         = true