[package]
name              = "rim-plugin-host"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
dep-inj.workspace         = true
flume.workspace           = true
serde.workspace           = true
toml.workspace            = true
tracing.workspace         = true
rim-application.workspace = true
rim-plugin-api.workspace  = true
rim-ports.workspace       = true
