[package]
name              = "rim-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "rim"
path = "src/main.rs"

[dependencies]
anyhow.workspace             = true
thiserror.workspace          = true
tracing-subscriber.workspace = true
tracing-appender.workspace   = true
time.workspace               = true
rim-app.workspace            = true
rim-paths.workspace          = true