[package]
name = "rim-app"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
derive_more = { version = "2.1", features = ["as_ref"] }
flume = "0.12"
tracing = "0.1"
dep-inj = "0.1"
dep-inj-target = { git = "https://github.com/zooeywm/dep-inj-target.git" }
rim-kernel = { path = "../rim-kernel" }
rim-infra-file-io = { path = "../rim-infra-file-io" }
rim-infra-file-watcher = { path = "../rim-infra-file-watcher" }
rim-infra-swap = { path = "../rim-infra-swap" }
rim-infra-input = { path = "../rim-infra-input" }
rim-infra-ui = { path = "../rim-infra-ui" }
