[package]
name              = "rim-app"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace                 = true
derive_more.workspace            = true
flume.workspace                  = true
tracing.workspace                = true
rim-kernel.workspace             = true
rim-infra-file-io.workspace      = true
rim-infra-file-watcher.workspace = true
rim-infra-persistence.workspace  = true
rim-infra-input.workspace        = true
rim-infra-ui.workspace           = true