[package]
name = "rim-infra-file-io"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
compio = { version = "0.18", features = ["fs", "macros"] }
flume = "0.12"
thiserror = "2"
tracing = "0.1"
dep-inj = "0.1"
dep-inj-target = { git = "https://github.com/zooeywm/dep-inj-target.git" }
rim-kernel = { path = "../rim-kernel" }
