[package]
name              = "rim-infra-file-io"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace     = true
compio.workspace     = true
flume.workspace      = true
tracing.workspace    = true
dep-inj.workspace    = true
rim-kernel.workspace = true