[package]
name = "rim-infra-persistence"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
base64 = "0.22"
flume = "0.12"
ropey = "1.6"
tracing = "0.1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
dep-inj = "0.1"
dep-inj-target = { git = "https://github.com/zooeywm/dep-inj-target.git" }
rim-kernel = { path = "../rim-kernel" }
rim-paths = { path = "../rim-paths" }
